@@ -1,0 +1,25 @@
+// Copyright 2015 Christian d'Heureuse, Inventec Informatik AG, Zurich, Switzerland
+// www.source-code.biz, www.inventec.ch/chdh
+//
+// This module is multi-licensed and may be used under the terms
+// of any of the following licenses:
+//
+//  EPL, Eclipse Public License, V1.0 or later, http://www.eclipse.org/legal
+//  LGPL, GNU Lesser General Public License, V2.1 or later, http://www.gnu.org/licenses/lgpl.html
+//
+// Please contact the author if you need another license.
+// This module is provided "as is", without warranties of any kind.
+
+package biz.source_code.dsp.filter;
+
+/**
+* General interface for a filter that processes a stream of signal sample values.
+*/
+public interface SignalFilter {
+
+/**
+* Processes an input signal value and returns the next output signal value.
+*/
+public double step (double inputValue);
+
+}
